add more functionality, tests add blocks

--- a/_locales/pxt-calliope-esp-strings.json
+++ b/_locales/pxt-calliope-esp-strings.json
@@ -1,6 +1,12 @@
 {
-  "esp8266.connect|block": "connect to the wifi",
-  "esp8266.init|block": "initialize |TX %tx|RX %rx|at baud rate %rate",
+  "esp8266.attach|block": "connect to the wifi network|SSID %ssid|password %password",
+  "esp8266.detach|block": "disconnect from wifi network",
+  "esp8266.init|block": "initialize ESP8266|TX %tx|RX %rx|at baud rate %rate",
+  "esp8266.isAttached|block": "network attached?",
+  "esp8266.sendOk|block": "send success?",
+  "esp8266.sendTCP|block": "send TCP message|server %address|port %port|message %message",
+  "esp8266.sendUDP|block": "send UDP message|server %address|port %port|message %message",
+  "esp8266.send|block": "send raw message|type %type|message %message|receive port %receivePort",
   "esp8266|block": "esp8266",
   "modem.enableDebug|block": "enable DEBUG %debug",
   "modem.expectOK|block": "check AT %command|response OK?",
