--- a/_locales/pxt-calliope-esp-jsdoc-strings.json
+++ b/_locales/pxt-calliope-esp-jsdoc-strings.json
@@ -1,10 +1,15 @@
 {
-  "esp8266": "Functions for the ESP8266 Wifi module.",
-  "esp8266.connect": "Connect to the wifi.",
-  "esp8266.init": "Initialize ESP8266 module. The serial port and generic settings.",
+  "esp8266.attach": "Connect to the wifi network.",
+  "esp8266.detach": "Disconnect from the wifi network.",
+  "esp8266.init": "Initialize ESP8266 module. The serial port and generic settings.\nFirst connects to the module, using 9600 baud, 8N1 and sets explicit\ntarget settings and resets the module.",
   "esp8266.init|param|rate": "the new baud rate, eg: BaudRate.BaudRate115200",
   "esp8266.init|param|rx": "the new reception pin, eg: SerialPin.C16",
   "esp8266.init|param|tx": "the new transmission pins, eg: SerialPin.C17",
+  "esp8266.isAttached": "Check if we are attached to the wifi network.",
+  "esp8266.send": "Send a message via wifi.\n@param {string} type send as TCP or UDP, eg: MessageType.TCP\n@param {string} address the server address\n@param {number} port the server port to send to, eg: 8080\n@param {string} message the actual data to send\n@returns {boolean} whether the send operation succeeded",
+  "esp8266.sendOk": "Check if the last send operation was successful.\nAlso reset the status.",
+  "esp8266.sendTCP": "Send a TCP message to the server.\n@param {string} address the server address\n@param {number} port the server port\n@param {string} message the data to send",
+  "esp8266.sendUDP": "Send a UDP message to the server.\n@param {string} address the server address\n@param {number} port the server port\n@param {string} message the data to send",
   "modem": "Modem functionality to send and received AT commands and responses.\n* @author Matthias L. Jugel",
   "modem.enableDebug": "Enable AT command debug.",
   "modem.expectOK": "Send an AT command to the modem module and expect OK. Just provide the actual\ncommand, not the AT prefix, like this AT(\"+CGMI?\"). This function\nonly returns whether the command was executed successful or not.",
