add wiring diagram, fix inconsistencies, add message unpack/decrypt

--- a/_locales/pxt-calliope-esp-jsdoc-strings.json
+++ b/_locales/pxt-calliope-esp-jsdoc-strings.json
@@ -12,13 +12,12 @@
   "esp8266.sendNumber": "Send a number to the backend server. Encodes key/value as a json message.",
   "esp8266.sendOk": "Check if the last send operation was successful.\nAlso reset the status.",
   "esp8266.sendString": "Send a string to the backend server. Encodes key/value as a json message.",
-  "esp8266.sendTCP": "Send a TCP message to the server.\n@param {string} address the server address\n@param {number} port the server port\n@param {string} message the data to send",
-  "esp8266.sendUDP": "Send a UDP message to the server.\n@param {string} address the server address\n@param {number} port the server port\n@param {string} message the data to send",
   "esp8266.setEncryption": "Set encryption mode. Whether data should be AES encrypted. See #showDeviceInfo\nhow to identify the device ID and secret.\nATTENTION: Only works if BLUETOOTH is enabled!",
   "esp8266.setEncryption|param|encrypted": "whether the data should be encrypted, eg: false",
   "esp8266.setServer": "Configure the server to use for the NB-IoT messaging.",
   "esp8266.setServer|param|host": "the IP address of a server to send messages to",
   "esp8266.setServer|param|port": "the port to send messages to, eg: 9090",
+  "esp8266.showDeviceInfo": "Show Calliope device id and the secret for communication.",
   "modem": "Modem functionality to send and received AT commands and responses.\n* @author Matthias L. Jugel",
   "modem.enableDebug": "Enable AT command debug.",
   "modem.expectOK": "Send an AT command to the modem module and expect OK. Just provide the actual\ncommand, not the AT prefix, like this AT(\"+CGMI?\"). This function\nonly returns whether the command was executed successful or not.",
