--- a/_locales/pxt-calliope-esp-strings.json
+++ b/_locales/pxt-calliope-esp-strings.json
@@ -3,15 +3,14 @@
   "esp8266.detach|block": "disconnect from wifi network",
   "esp8266.init|block": "initialize ESP8266|TX %tx|RX %rx|at baud rate %rate",
   "esp8266.isAttached|block": "network attached?",
-  "esp8266.sendEncoded|block": "send raw message|message %message",
+  "esp8266.sendEncoded|block": "send encoded message|message %message",
   "esp8266.sendNumber|block": "send number message|key %key|value %n",
   "esp8266.sendOk|block": "send success?",
   "esp8266.sendString|block": "send string message|key %key|value %n",
-  "esp8266.sendTCP|block": "send TCP message|server %address|port %port|message %message",
-  "esp8266.sendUDP|block": "send UDP message|server %address|port %port|message %message",
   "esp8266.send|block": "send raw message|type %type|server %address|port %port|message %message",
   "esp8266.setEncryption|block": "encrypt messages %encrypted",
   "esp8266.setServer|block": "set server |address %host|port %port",
+  "esp8266.showDeviceInfo|block": "show device Info|on display %onDisplay",
   "esp8266|block": "esp8266",
   "modem.enableDebug|block": "enable DEBUG %debug",
   "modem.expectOK|block": "check AT %command|response OK?",
