--- a/_locales/pxt-calliope-esp-strings.json
+++ b/_locales/pxt-calliope-esp-strings.json
@@ -12,17 +12,5 @@
   "esp8266.setServer|block": "set server |address %host|port %port",
   "esp8266.showDeviceInfo|block": "show device Info|on display %onDisplay",
   "esp8266|block": "ESP8266",
-  "modem.enableDebug|block": "enable DEBUG %debug",
-  "modem.expectOK|block": "check AT %command|response OK?",
-  "modem.init|block": "initialize Modem|TX %tx|RX %rx|at baud rate %rate",
-  "modem.pushAT|block": "send AT %command",
-  "modem.receiveResponse|block": "wait for response %cond",
-  "modem.sendAT|block": "send AT %command and receive",
-  "modem|block": "modem",
-  "serial.resetSerial|block": "serial reset",
-  "serial.setReceiveBufferSize|block": "serial receive buffer size %size",
-  "serial|block": "serial",
-  "{id:category}Esp8266": "Esp8266",
-  "{id:category}Modem": "Modem",
-  "{id:category}Serial": "Serial"
+  "{id:category}Esp8266": "Esp8266"
 }
